Fix loader.bat for Windows - https://github.com/JATOS/JATOS/issues/265